[terra-clinical-detail-view] Fixed IE10 wrapping issue for label-value-views (#521)
* Added max-width for DetailListItem to fix IE wrapping issue with clinical-label-value-view inside of detail-view-list

* Updated CHANGELOG.md file

--- a/packages/terra-clinical-detail-view/src/DetailListItem.scss
+++ b/packages/terra-clinical-detail-view/src/DetailListItem.scss
@@ -1,5 +1,6 @@
 :local {
   .detail-list-item {
+    max-width: 100%;
     min-width: 50%;
     padding: 0.7142857143rem 0.7142857143rem 0.7142857143rem 0.07142857143rem;
   }
